Added WebLaf UI Removed MainGUI.java (Not used) Added a progress bar to the GUI

--- a/src/main/java/GUI/SwingMain.form
+++ b/src/main/java/GUI/SwingMain.form
@@ -7,10 +7,12 @@
     <rowspec value="top:4dlu:noGrow"/>
     <rowspec value="center:max(d;4px):noGrow"/>
     <rowspec value="top:4dlu:noGrow"/>
+    <rowspec value="center:max(d;4px):noGrow"/>
     <rowspec value="top:4dlu:noGrow"/>
-    <colspec value="fill:d:grow"/>
+    <rowspec value="top:4dlu:noGrow"/>
+    <colspec value="fill:min(d;500px):grow"/>
     <colspec value="left:4dlu:noGrow"/>
-    <colspec value="fill:max(d;4px):grow"/>
+    <colspec value="fill:min(d;500px):grow"/>
     <constraints>
       <xy x="20" y="20" width="993" height="708"/>
     </constraints>
@@ -24,13 +26,13 @@
         </constraints>
         <properties/>
       </component>
-      <component id="f8946" class="javax.swing.JButton" binding="button1" default-binding="true">
+      <component id="f8946" class="javax.swing.JButton" binding="stopButton" default-binding="true">
         <constraints>
-          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <forms/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="Stop"/>
         </properties>
       </component>
       <scrollpane id="837fa">
@@ -49,11 +51,27 @@
       </scrollpane>
       <component id="b66db" class="javax.swing.JButton" binding="startButton" default-binding="true">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <forms/>
         </constraints>
         <properties>
           <text value="Start"/>
+        </properties>
+      </component>
+      <component id="daa99" class="javax.swing.JProgressBar" binding="progressBar1" default-binding="true">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <forms defaultalign-horz="false"/>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="aa51" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <forms/>
+        </constraints>
+        <properties>
+          <text value="Progress:"/>
         </properties>
       </component>
     </children>
