small-sized schedule chart

--- a/src/main/java/GUI/Frame/view/GanttChart.css
+++ b/src/main/java/GUI/Frame/view/GanttChart.css
@@ -1,4 +1,4 @@
 .axis {
-    -fx-tick-label-font: bolder 12.5pt fantasy;
+    -fx-tick-label-font: bolder 12px fantasy;
     -fx-tick-label-fill: #663399;
 }
